upcoming decision tables section